Revert "Replaced liquid-style highlight with markdown-style one"
This reverts commit 80b987848237802aef6d8aa71da3ca39ae385f20.

--- a/_drafts/_trashed/2015-04-19-history-is-nothing-but-a-loop.html
+++ b/_drafts/_trashed/2015-04-19-history-is-nothing-but-a-loop.html
@@ -7,9 +7,9 @@ tags:
 tumblr_url: http://shybovycha.tumblr.com/post/116811050801/history-is-nothing-but-a-loop
 ---
 
-```haskell
+{% highlight haskell %}
     newLanguage :: Language -> Language -> Language
     newLanguage = Haskell `refactorTo` Java8
     newLanguage = Haskell `refactorTo` Scala
     newLanguage = Haskell `refactorTo` CSharp
-```
+{% endhighlight %}
