Remove site.baseurl interpolation

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@ permalink: /about/
 
 <div class="flex-row photo-container">
   <div class="flex-col">
-    <img src="{{ site.baseurl }}/images/photo-large-compressed.jpg" alt="photo-large" class="photo-large">
+    <img src="//images/photo-large-compressed.jpg" alt="photo-large" class="photo-large">
   </div>
 
   <div class="flex-col">
@@ -46,115 +46,115 @@ permalink: /about/
     <div class="carousel">
       <div class="carousel-inner">
         <div class="carousel-item">
-          <img data-photo-src="{{ site.baseurl }}/images/photo-samples/kovacova.jpg" alt="Kováčová, Slovakia">
+          <img data-photo-src="//images/photo-samples/kovacova.jpg" alt="Kováčová, Slovakia">
 
           <div class="carousel-caption">Kováčová, Slovakia</div>
         </div>
 
         <div class="carousel-item">
-          <img data-photo-src="{{ site.baseurl }}/images/photo-samples/stockholm.jpg" alt="Stockholm, Sweden">
+          <img data-photo-src="//images/photo-samples/stockholm.jpg" alt="Stockholm, Sweden">
 
           <div class="carousel-caption">Stockholm, Sweden</div>
         </div>
 
         <div class="carousel-item">
-          <img data-photo-src="{{ site.baseurl }}/images/photo-samples/vienn.jpg" alt="Vienn, Austria">
+          <img data-photo-src="//images/photo-samples/vienn.jpg" alt="Vienn, Austria">
 
           <div class="carousel-caption">Vienn, Austria</div>
         </div>
 
         <div class="carousel-item">
-          <img data-photo-src="{{ site.baseurl }}/images/photo-samples/cabo_da_roca.jpg" alt="Cabo da Roca, Portugal">
+          <img data-photo-src="//images/photo-samples/cabo_da_roca.jpg" alt="Cabo da Roca, Portugal">
 
           <div class="carousel-caption">Cabo da Roca, Portugal</div>
         </div>
 
         <div class="carousel-item">
-          <img data-photo-src="{{ site.baseurl }}/images/photo-samples/oko_morskie.jpg" alt="Oko Morskie, Poland">
+          <img data-photo-src="//images/photo-samples/oko_morskie.jpg" alt="Oko Morskie, Poland">
 
           <div class="carousel-caption">Oko Morskie, Poland</div>
         </div>
 
         <div class="carousel-item">
-          <img data-photo-src="{{ site.baseurl }}/images/photo-samples/azure_window.jpg" alt="Azure Window, Malta">
+          <img data-photo-src="//images/photo-samples/azure_window.jpg" alt="Azure Window, Malta">
 
           <div class="carousel-caption">Azure Window, Malta</div>
         </div>
 
         <div class="carousel-item">
-          <img data-photo-src="{{ site.baseurl }}/images/photo-samples/gdansk.jpg" alt="Gdańsk, Poland">
+          <img data-photo-src="//images/photo-samples/gdansk.jpg" alt="Gdańsk, Poland">
 
           <div class="carousel-caption">Gdańsk, Poland</div>
         </div>
 
         <div class="carousel-item">
-          <img data-photo-src="{{ site.baseurl }}/images/photo-samples/paris.jpg" alt="Paris, France">
+          <img data-photo-src="//images/photo-samples/paris.jpg" alt="Paris, France">
 
           <div class="carousel-caption">Paris, France</div>
         </div>
 
         <div class="carousel-item">
-          <img data-photo-src="{{ site.baseurl }}/images/photo-samples/pisa.jpg" alt="Pisa, Italy">
+          <img data-photo-src="//images/photo-samples/pisa.jpg" alt="Pisa, Italy">
 
           <div class="carousel-caption">Pisa, Italy</div>
         </div>
 
         <div class="carousel-item">
-          <img data-photo-src="{{ site.baseurl }}/images/photo-samples/budapest.jpg" alt="Budapest, Hungary">
+          <img data-photo-src="//images/photo-samples/budapest.jpg" alt="Budapest, Hungary">
 
           <div class="carousel-caption">Budapest, Hungary</div>
         </div>
 
         <div class="carousel-item">
-          <img data-photo-src="{{ site.baseurl }}/images/photo-samples/troll_tunga.jpg" alt="Trolltunga, Norway">
+          <img data-photo-src="//images/photo-samples/troll_tunga.jpg" alt="Trolltunga, Norway">
 
           <div class="carousel-caption">Trolltunga, Norway</div>
         </div>
 
         <div class="carousel-item">
-          <img data-photo-src="{{ site.baseurl }}/images/photo-samples/rome.jpg" alt="Rome, Italy">
+          <img data-photo-src="//images/photo-samples/rome.jpg" alt="Rome, Italy">
 
           <div class="carousel-caption">Rome, Italy</div>
         </div>
 
         <div class="carousel-item">
-          <img data-photo-src="{{ site.baseurl }}/images/photo-samples/venice.jpg" alt="Venice, Italy">
+          <img data-photo-src="//images/photo-samples/venice.jpg" alt="Venice, Italy">
 
           <div class="carousel-caption">Venice, Italy</div>
         </div>
 
         <div class="carousel-item">
-          <img data-photo-src="{{ site.baseurl }}/images/photo-samples/gran_canaria.jpg" alt="Gran Canaria, Spain">
+          <img data-photo-src="//images/photo-samples/gran_canaria.jpg" alt="Gran Canaria, Spain">
 
           <div class="carousel-caption">Gran Canaria, Spain</div>
         </div>
 
         <div class="carousel-item">
-          <img data-photo-src="{{ site.baseurl }}/images/photo-samples/sydney.jpg" alt="Sydney, Australia">
+          <img data-photo-src="//images/photo-samples/sydney.jpg" alt="Sydney, Australia">
 
           <div class="carousel-caption">Sydney, Australia</div>
         </div>
 
         <div class="carousel-item">
-          <img data-photo-src="{{ site.baseurl }}/images/photo-samples/sakura-blossom.jpg" alt="Sakura blossom">
+          <img data-photo-src="//images/photo-samples/sakura-blossom.jpg" alt="Sakura blossom">
 
           <div class="carousel-caption">Sakura blossom</div>
         </div>
 
         <div class="carousel-item">
-          <img data-photo-src="{{ site.baseurl }}/images/photo-samples/butterfly.jpg" alt="Butterfly">
+          <img data-photo-src="//images/photo-samples/butterfly.jpg" alt="Butterfly">
 
           <div class="carousel-caption">Butterfly</div>
         </div>
 
         <div class="carousel-item">
-          <img data-photo-src="{{ site.baseurl }}/images/photo-samples/sakura-blossom2.jpg" alt="Sakura blossom">
+          <img data-photo-src="//images/photo-samples/sakura-blossom2.jpg" alt="Sakura blossom">
 
           <div class="carousel-caption">Sakura blossom</div>
         </div>
 
         <div class="carousel-item">
-          <img data-photo-src="{{ site.baseurl }}/images/photo-samples/owl.jpg" alt="Owl">
+          <img data-photo-src="//images/photo-samples/owl.jpg" alt="Owl">
 
           <div class="carousel-caption">Owl</div>
         </div>
@@ -167,4 +167,4 @@ permalink: /about/
   <div class="lightbox-inner"><img src="" alt=""></div>
 </div>
 
-<script src="{{ '/js/about.js' | prepend:site.baseurl }}"></script>
+<script src="//js/about.js"></script>
