Refactor some of the older posts to markdown

--- a/_posts/tumblr/2015-04-06-shootthem.html
+++ b/_posts/tumblr/2015-04-06-shootthem.html
@@ -17,29 +17,15 @@ tumblr_url: http://shybovycha.tumblr.com/post/115680406461/shootthem
 
 <p>It is really plain.</p>
 
-<p>Yet, it was and it <b>is</b> a starting point for me =)</p>
+<p>Yet, it was and it <b>is</b> a starting point for me 😁</p>
 
 <p>Here are some of game screenshots:</p>
 
-<div class="row">
-    <div class="col-xs-12 col-md-6">
-        <figure class="tmblr-full" data-orig-height="768" data-orig-width="1366">
-        <img src="https://40.media.tumblr.com/95ddd7383427489e1c49686529772b12/tumblr_inline_nmea8sxPPW1qh5oee_540.png" data-orig-height="768" data-orig-width="1366"/></figure>
-    </div>
-
-    <div class="col-xs-12 col-md-6">
-        <figure class="tmblr-full" data-orig-height="768" data-orig-width="1366"><img src="https://40.media.tumblr.com/3c7f02ed76fb4cd8990e92a95d6130bb/tumblr_inline_nmea966kmi1qh5oee_540.png" data-orig-height="768" data-orig-width="1366"/></figure>
-    </div>
-
-    <div class="col-xs-12 col-md-6">
-        <figure class="tmblr-full" data-orig-height="768" data-orig-width="1366"><img src="https://40.media.tumblr.com/008359ef9bdbe0f5bd2c86c943e538d0/tumblr_inline_nmea9pD5Nj1qh5oee_540.png" data-orig-height="768" data-orig-width="1366"/></figure>
-    </div>
-
-    <div class="col-xs-12 col-md-6">
-        <figure class="tmblr-full" data-orig-height="768" data-orig-width="1366"><img src="https://40.media.tumblr.com/bd88e4fa345121c06a850e82a2b4805b/tumblr_inline_nmeaa4oVAD1qh5oee_540.png" data-orig-height="768" data-orig-width="1366"/></figure>
-    </div>
-
-    <div class="col-xs-12 col-md-6">
-        <figure class="tmblr-full" data-orig-height="768" data-orig-width="1366"><img src="https://41.media.tumblr.com/441f9207f3eda4d1454202b15666055d/tumblr_inline_nmeaaiOKq51qh5oee_540.png" data-orig-height="768" data-orig-width="1366"/></figure>
-    </div>
+<div style="display:flex; flex-direction:column; align-content:center;">
+<div><img data-src="https://40.media.tumblr.com/95ddd7383427489e1c49686529772b12/tumblr_inline_nmea8sxPPW1qh5oee_540.png" data-orig-height="768" data-orig-width="1366"/></div>
+<div><img data-src="https://40.media.tumblr.com/3c7f02ed76fb4cd8990e92a95d6130bb/tumblr_inline_nmea966kmi1qh5oee_540.png" data-orig-height="768" data-orig-width="1366"/></div>
+<div><img data-src="https://40.media.tumblr.com/008359ef9bdbe0f5bd2c86c943e538d0/tumblr_inline_nmea9pD5Nj1qh5oee_540.png" data-orig-height="768" data-orig-width="1366"/></div>
+<div><img data-src="https://40.media.tumblr.com/bd88e4fa345121c06a850e82a2b4805b/tumblr_inline_nmeaa4oVAD1qh5oee_540.png" data-orig-height="768" data-orig-width="1366"/></div>
+<div><img data-src="https://41.media.tumblr.com/441f9207f3eda4d1454202b15666055d/tumblr_inline_nmeaaiOKq51qh5oee_540.png" data-orig-height="768" data-orig-width="1366"/></div>
+</div>
 </div>
