--- a/index.html
+++ b/index.html
@@ -2,4 +2,20 @@
 layout: default
 ---
 
-{% include index.html %}
+{% for post in paginator.posts %}
+  <article>
+    <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
+
+    <span class="timestamp">
+      {{ post.date | date: "%b %-d, %Y" }}
+    </span>
+
+    {{ post.excerpt }}
+
+    {% if post.content != post.excerpt %}
+      <div>
+        <a class="btn btn-md btn-primary read-more" href="{{ post.url }}">Read more</a>
+      </div>
+    {% endif %}
+  </article>
+{% endfor %}
