Fix missing old tumblr images

--- a/_posts/tumblr/2012-02-27-my-coursework-becomes-a-bit-more-interesting.html
+++ b/_posts/tumblr/2012-02-27-my-coursework-becomes-a-bit-more-interesting.html
@@ -6,4 +6,8 @@ tags:
 - projects
 tumblr_url: http://shybovycha.tumblr.com/post/18368625790/my-coursework-becomes-a-bit-more-interesting
 ---
-<img src="/tumblr_files/tumblr_m01f6gS9QT1qio88bo1_1280.jpg"/><br/><img src="/tumblr_files/tumblr_m01f6gS9QT1qio88bo2_1280.webp"/><br/><br/><p>My coursework becomes a bit more interesting =)</p>
+<img src="/images/tumblr/coursework-becomes-more-interesting/tumblr_m01f6gS9QT1qio88bo1_500.webp"/>
+<br/>
+<img src="/images/tumblr/coursework-becomes-more-interesting/tumblr_m01f6gS9QT1qio88bo2_500.webp"/>
+<br/>
+<p>My coursework becomes a bit more interesting =)</p>
